draco_trunk/llvm_c_api/core_h.ads


  --*< Special purpose, only applies to global arrays
  --*< Rename collisions when linking (static
  --                               functions)

  --*< Like Internal, but omit from symbol table
  --*< Function to be imported from DLL
  --*< Function to be accessible from DLL
  --*< ExternalWeak linkage description
  --*< Obsolete
  --*< Tentative definitions
  --*< Like Private, but linker removes.
   type LLVMLinkage is
     (LLVMExternalLinkage,
      LLVMAvailableExternallyLinkage,
      LLVMLinkOnceAnyLinkage,
      LLVMLinkOnceODRLinkage,
      LLVMWeakAnyLinkage,
      LLVMWeakODRLinkage,
      LLVMAppendingLinkage,
      LLVMInternalLinkage,
      LLVMPrivateLinkage,
      LLVMDLLImportLinkage,
      LLVMDLLExportLinkage,
      LLVMExternalWeakLinkage,
      LLVMGhostLinkage,
      LLVMCommonLinkage,
      LLVMLinkerPrivateLinkage);
   pragma Convention (C, LLVMLinkage);  -- Core.h:233

  --*< The GV is visible
  --*< The GV is hidden
  --*< The GV is protected
   type LLVMVisibility is
     (LLVMDefaultVisibility,
      LLVMHiddenVisibility,
      LLVMProtectedVisibility);
   pragma Convention (C, LLVMVisibility);  -- Core.h:239

   subtype LLVMCallConv is unsigned;
   LLVMCCallConv           : constant LLVMCallConv := 0;
   LLVMFastCallConv        : constant LLVMCallConv := 8;
   LLVMColdCallConv        : constant LLVMCallConv := 9;
   LLVMX86StdcallCallConv  : constant LLVMCallConv := 64;
   LLVMX86FastcallCallConv : constant LLVMCallConv := 65;  -- Core.h:247

  --*< equal
  --*< not equal
  --*< unsigned greater than
  --*< unsigned greater or equal
  --*< unsigned less than
  --*< unsigned less or equal
  --*< signed greater than
  --*< signed greater or equal
  --*< signed less than
  --*< signed less or equal
   subtype LLVMIntPredicate is unsigned;
   LLVMIntEQ  : constant LLVMIntPredicate := 32;
   LLVMIntNE  : constant LLVMIntPredicate := 33;
   LLVMIntUGT : constant LLVMIntPredicate := 34;
   LLVMIntUGE : constant LLVMIntPredicate := 35;
   LLVMIntULT : constant LLVMIntPredicate := 36;
   LLVMIntULE : constant LLVMIntPredicate := 37;
   LLVMIntSGT : constant LLVMIntPredicate := 38;
   LLVMIntSGE : constant LLVMIntPredicate := 39;
   LLVMIntSLT : constant LLVMIntPredicate := 40;
   LLVMIntSLE : constant LLVMIntPredicate := 41;  -- Core.h:260

  --*< Always false (always folded)
  --*< True if ordered and equal
  --*< True if ordered and greater than
  --*< True if ordered and greater than or equal
  --*< True if ordered and less than
  --*< True if ordered and less than or equal
  --*< True if ordered and operands are unequal
  --*< True if ordered (no nans)
  --*< True if unordered: isnan(X) | isnan(Y)
  --*< True if unordered or equal
  --*< True if unordered or greater than
  --*< True if unordered, greater than, or equal
  --*< True if unordered or less than
  --*< True if unordered, less than, or equal
  --*< True if unordered or not equal
  --*< Always true (always folded)
   type LLVMRealPredicate is
     (LLVMRealPredicateFalse,
      LLVMRealOEQ,
      LLVMRealOGT,
      LLVMRealOGE,
      LLVMRealOLT,
      LLVMRealOLE,
      LLVMRealONE,
      LLVMRealORD,
      LLVMRealUNO,
      LLVMRealUEQ,
      LLVMRealUGT,
      LLVMRealUGE,
      LLVMRealULT,
      LLVMRealULE,
      LLVMRealUNE,
      LLVMRealPredicateTrue);
   pragma Convention (C, LLVMRealPredicate);  -- Core.h:279

  --===-- Error handling ----------------------------------------------------===
   procedure LLVMDisposeMessage (arg1 : Interfaces.C.Strings.chars_ptr);  -- Core.h:284
   pragma Import (C, LLVMDisposeMessage, "LLVMDisposeMessage");

  --===-- Contexts ----------------------------------------------------------===
  -- Create and destroy contexts.
   function LLVMContextCreate return LLVMContextRef;  -- Core.h:290
   pragma Import (C, LLVMContextCreate, "LLVMContextCreate");

   function LLVMGetGlobalContext return LLVMContextRef;  -- Core.h:291
   pragma Import (C, LLVMGetGlobalContext, "LLVMGetGlobalContext");

   procedure LLVMContextDispose (arg1 : LLVMContextRef);  -- Core.h:292
   pragma Import (C, LLVMContextDispose, "LLVMContextDispose");

   function LLVMGetMDKindIDInContext
     (arg1 : LLVMContextRef;
      arg2 : Interfaces.C.Strings.chars_ptr;
      arg3 : unsigned) return unsigned;  -- Core.h:294
   pragma Import (C, LLVMGetMDKindIDInContext, "LLVMGetMDKindIDInContext");

   function LLVMGetMDKindID (arg1 : Interfaces.C.Strings.chars_ptr; arg2 : unsigned) return unsigned;  -- Core.h:296
   pragma Import (C, LLVMGetMDKindID, "LLVMGetMDKindID");

  --===-- Modules -----------------------------------------------------------===
  -- Create and destroy modules.
  --* See llvm::Module::Module.
   function LLVMModuleCreateWithName (arg1 : Interfaces.C.Strings.chars_ptr) return LLVMModuleRef;  -- Core.h:302
   pragma Import (C, LLVMModuleCreateWithName, "LLVMModuleCreateWithName");

   function LLVMModuleCreateWithNameInContext (arg1 : Interfaces.C.Strings.chars_ptr; arg2 : LLVMContextRef) return LLVMModuleRef;  -- Core.h:303
   pragma Import (C, LLVMModuleCreateWithNameInContext, "LLVMModuleCreateWithNameInContext");

  --* See llvm::Module::~Module.
   procedure LLVMDisposeModule (arg1 : LLVMModuleRef);  -- Core.h:307
   pragma Import (C, LLVMDisposeModule, "LLVMDisposeModule");

  --* Data layout. See Module::getDataLayout.
   function LLVMGetDataLayout (arg1 : LLVMModuleRef) return Interfaces.C.Strings.chars_ptr;  -- Core.h:310
   pragma Import (C, LLVMGetDataLayout, "LLVMGetDataLayout");

   procedure LLVMSetDataLayout (arg1 : LLVMModuleRef; arg2 : Interfaces.C.Strings.chars_ptr);  -- Core.h:311
   pragma Import (C, LLVMSetDataLayout, "LLVMSetDataLayout");

  --* Target triple. See Module::getTargetTriple.
   function LLVMGetTarget (arg1 : LLVMModuleRef) return Interfaces.C.Strings.chars_ptr;  -- Core.h:314
   pragma Import (C, LLVMGetTarget, "LLVMGetTarget");

   procedure LLVMSetTarget (arg1 : LLVMModuleRef; arg2 : Interfaces.C.Strings.chars_ptr);  -- Core.h:315
   pragma Import (C, LLVMSetTarget, "LLVMSetTarget");

  --* See Module::addTypeName.
   function LLVMAddTypeName
     (arg1 : LLVMModuleRef;
      arg2 : Interfaces.C.Strings.chars_ptr;
      arg3 : LLVMTypeRef) return LLVMBool;  -- Core.h:318
   pragma Import (C, LLVMAddTypeName, "LLVMAddTypeName");

   procedure LLVMDeleteTypeName (arg1 : LLVMModuleRef; arg2 : Interfaces.C.Strings.chars_ptr);  -- Core.h:319
   pragma Import (C, LLVMDeleteTypeName, "LLVMDeleteTypeName");

   function LLVMGetTypeByName (arg1 : LLVMModuleRef; arg2 : Interfaces.C.Strings.chars_ptr) return LLVMTypeRef;  -- Core.h:320
   pragma Import (C, LLVMGetTypeByName, "LLVMGetTypeByName");

  --* See Module::dump.
   procedure LLVMDumpModule (arg1 : LLVMModuleRef);  -- Core.h:323
   pragma Import (C, LLVMDumpModule, "LLVMDumpModule");

  --===-- Types -------------------------------------------------------------===
  -- LLVM types conform to the following hierarchy:
  -- *
  -- *   types:
  -- *     integer type
  -- *     real type
  -- *     function type
  -- *     sequence types:
  -- *       array type
  -- *       pointer type
  -- *       vector type
  -- *     void type
  -- *     label type
  -- *     opaque type
  --

  --* See llvm::LLVMTypeKind::getTypeID.
   function LLVMGetTypeKind (arg1 : LLVMTypeRef) return LLVMTypeKind;  -- Core.h:344
   pragma Import (C, LLVMGetTypeKind, "LLVMGetTypeKind");

  --* See llvm::LLVMType::getContext.
   function LLVMGetTypeContext (arg1 : LLVMTypeRef) return LLVMContextRef;  -- Core.h:347
   pragma Import (C, LLVMGetTypeContext, "LLVMGetTypeContext");

  -- Operations on integer types
   function LLVMInt1TypeInContext (arg1 : LLVMContextRef) return LLVMTypeRef;  -- Core.h:350
   pragma Import (C, LLVMInt1TypeInContext, "LLVMInt1TypeInContext");

   function LLVMInt8TypeInContext (arg1 : LLVMContextRef) return LLVMTypeRef;  -- Core.h:351
   pragma Import (C, LLVMInt8TypeInContext, "LLVMInt8TypeInContext");

   function LLVMInt16TypeInContext (arg1 : LLVMContextRef) return LLVMTypeRef;  -- Core.h:352
   pragma Import (C, LLVMInt16TypeInContext, "LLVMInt16TypeInContext");

   function LLVMInt32TypeInContext (arg1 : LLVMContextRef) return LLVMTypeRef;  -- Core.h:353
   pragma Import (C, LLVMInt32TypeInContext, "LLVMInt32TypeInContext");

   function LLVMInt64TypeInContext (arg1 : LLVMContextRef) return LLVMTypeRef;  -- Core.h:354
   pragma Import (C, LLVMInt64TypeInContext, "LLVMInt64TypeInContext");

   function LLVMIntTypeInContext (arg1 : LLVMContextRef; arg2 : unsigned) return LLVMTypeRef;  -- Core.h:355
   pragma Import (C, LLVMIntTypeInContext, "LLVMIntTypeInContext");

   function LLVMInt1Type return LLVMTypeRef;  -- Core.h:357
   pragma Import (C, LLVMInt1Type, "LLVMInt1Type");

   function LLVMInt8Type return LLVMTypeRef;  -- Core.h:358
   pragma Import (C, LLVMInt8Type, "LLVMInt8Type");

   function LLVMInt16Type return LLVMTypeRef;  -- Core.h:359
   pragma Import (C, LLVMInt16Type, "LLVMInt16Type");

   function LLVMInt32Type return LLVMTypeRef;  -- Core.h:360
   pragma Import (C, LLVMInt32Type, "LLVMInt32Type");

   function LLVMInt64Type return LLVMTypeRef;  -- Core.h:361
   pragma Import (C, LLVMInt64Type, "LLVMInt64Type");

   function LLVMIntType (arg1 : unsigned) return LLVMTypeRef;  -- Core.h:362
   pragma Import (C, LLVMIntType, "LLVMIntType");

   function LLVMGetIntTypeWidth (arg1 : LLVMTypeRef) return unsigned;  -- Core.h:363
   pragma Import (C, LLVMGetIntTypeWidth, "LLVMGetIntTypeWidth");

  -- Operations on real types
   function LLVMFloatTypeInContext (arg1 : LLVMContextRef) return LLVMTypeRef;  -- Core.h:366
   pragma Import (C, LLVMFloatTypeInContext, "LLVMFloatTypeInContext");

   function LLVMDoubleTypeInContext (arg1 : LLVMContextRef) return LLVMTypeRef;  -- Core.h:367
   pragma Import (C, LLVMDoubleTypeInContext, "LLVMDoubleTypeInContext");

   function LLVMX86FP80TypeInContext (arg1 : LLVMContextRef) return LLVMTypeRef;  -- Core.h:368
   pragma Import (C, LLVMX86FP80TypeInContext, "LLVMX86FP80TypeInContext");

   function LLVMFP128TypeInContext (arg1 : LLVMContextRef) return LLVMTypeRef;  -- Core.h:369
   pragma Import (C, LLVMFP128TypeInContext, "LLVMFP128TypeInContext");

   function LLVMPPCFP128TypeInContext (arg1 : LLVMContextRef) return LLVMTypeRef;  -- Core.h:370
   pragma Import (C, LLVMPPCFP128TypeInContext, "LLVMPPCFP128TypeInContext");

   function LLVMFloatType return LLVMTypeRef;  -- Core.h:372
   pragma Import (C, LLVMFloatType, "LLVMFloatType");

   function LLVMDoubleType return LLVMTypeRef;  -- Core.h:373
   pragma Import (C, LLVMDoubleType, "LLVMDoubleType");

   function LLVMX86FP80Type return LLVMTypeRef;  -- Core.h:374
   pragma Import (C, LLVMX86FP80Type, "LLVMX86FP80Type");

   function LLVMFP128Type return LLVMTypeRef;  -- Core.h:375
   pragma Import (C, LLVMFP128Type, "LLVMFP128Type");

   function LLVMPPCFP128Type return LLVMTypeRef;  -- Core.h:376
   pragma Import (C, LLVMPPCFP128Type, "LLVMPPCFP128Type");

  -- Operations on function types
   function LLVMFunctionType
     (ReturnType : LLVMTypeRef;
      ParamTypes : System.Address;
      ParamCount : unsigned;
      IsVarArg   : LLVMBool) return LLVMTypeRef;  -- Core.h:379
   pragma Import (C, LLVMFunctionType, "LLVMFunctionType");

   function LLVMIsFunctionVarArg (arg1 : LLVMTypeRef) return LLVMBool;  -- Core.h:382
   pragma Import (C, LLVMIsFunctionVarArg, "LLVMIsFunctionVarArg");

   function LLVMGetReturnType (arg1 : LLVMTypeRef) return LLVMTypeRef;  -- Core.h:383
   pragma Import (C, LLVMGetReturnType, "LLVMGetReturnType");

   function LLVMCountParamTypes (arg1 : LLVMTypeRef) return unsigned;  -- Core.h:384
   pragma Import (C, LLVMCountParamTypes, "LLVMCountParamTypes");

   procedure LLVMGetParamTypes (arg1 : LLVMTypeRef; arg2 : System.Address);  -- Core.h:385
   pragma Import (C, LLVMGetParamTypes, "LLVMGetParamTypes");
